# Voice_Robot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/voice_control_robot_package/lib/voice_control_robot_package/: google_voice_recognizer.py  voice_cmd_vel.py
install/voice_control_robot_package/share/ament_index/resource_index/package_run_dependencies/: voice_control_robot_package
install/voice_control_robot_package/share/voice_control_robot_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/voice_control_robot_package/share/voice_control_robot_package/cmake/: ament_cmake_export_dependencies-extras.cmake  voice_control_robot_packageConfig-version.cmake  voice_control_robot_packageConfig.cmake
install/voice_control_robot_package/share/voice_control_robot_package/environment/: ament_prefix_path.dsv  path.dsv
install/voice_control_robot_package/share/voice_control_robot_package/launch/: gazebo_robot.launch.py
install/voice_control_robot_package/share/voice_control_robot_package/src/: random_command_publisher.py
install/voice_control_robot_package/share/voice_control_robot_package/worlds/: empty.world
log/: latest_build  latest_list
src/voice_control_robot_package/: CMakeLists.txt
src/voice_control_robot_package/launch/: gazebo_robot.launch.py
src/voice_control_robot_package/src/: random_text_publisher.py  speech_recognizer.py  voice_cmd_vel.py
src/voice_control_robot_package/worlds/: empty.world
(+1 files in other folders)
